# Simsam

./: LICENSE.md  README.md  pyproject.toml
simsam/: __init__.py  simsam.py
tests/: test_simsam.py
