[tool.poetry]
name = "Simsam"
version = "0.1.0"
description = "Simplex sampling algorithm"
authors = ["Bastian Rieck <bastian@rieck.me>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
