[tool.poetry]
name = "Simsam"
version = "0.1.3"
description = "Simplex sampling algorithm"
readme = "README.md"
repository = "https://github.com/Pseudomanifold/Simsam"
authors = ["Bastian Rieck <bastian@rieck.me>"]
include = ["README.md"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
